--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "phone-store-reactjs",
+  "homepage": "https://github.com/TranHaiBinh061296/phone-store",
+  "name": "phone-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
