--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/TranHaiBinh061296/phone-store-reactjs",
+  "homepage": "https://TranHaiBinh061296.github.io/phone-store-reactjs",
   "name": "phone-store-reactjs",
   "version": "0.1.0",
   "private": true,
@@ -18,8 +18,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
